@@ -1,5 +1,6 @@
 1.0.0
 -----
+ * Ignore unknown properties during Sidecar client deserialization (CASSANDRASC-53)
  * Create staging directory if it doesn't exists (CASSANDRASC-56)
  * Remove RESTEasy (CASSANDRASC-57)
  * Use in-jvm dtest framework for integration tests (CASSANDRASC-51)
